Chat tutorial: targetting a fixed height, but with min-height as translations may overflow

--- a/person/static/css/tutorial.css
+++ b/person/static/css/tutorial.css
@@ -23,6 +23,7 @@
   line-height: 1.5;
 }
 #irchat .chat-middle {
+  min-height: 365px;
   text-align: left;
   margin: 30px 40px 30px 120px;
   line-height: 2;
